config/namespaces/dev/deployment-hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  selector:
    matchLabels:
      greeting: hello
  replicas: 1
  template:
    metadata:
      labels:
        greeting: hello
        yanni: test
        anthos-demo: demo-success
    spec:
      containers:
      - name: hello-world
        image: "gcr.io/google-samples/hello-app:2.0"
      - name: hello-kubernetes
        image: "gcr.io/google-samples/node-hello:1.0"
