config/namespaces/dev/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP
