config/namespaces/dev/service-hello-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:  
  name: hello-nodeport-service
spec:
  selector:    
    greeting: hello
  type: NodePort
  ports:  
  - name: http
    port: 50000
    targetPort: 50000
    nodePort: 30001
    protocol: TCP
